# cmake-cortex-m

./: CMakeLists.txt  README.md
project/: CMakeLists.txt
